# shlop

./: .gitignore  AGENT_TASKS.md  ARCHITECTURE.md  Cargo.toml  DESIGN.md  FEATURES.md  IMPLEMENTATION_PLAN.md  README.md  TODO.delegate-refactor.md  TODO.txt  flake.nix
.config/flakebox/: id  shellHook.sh
.config/selfci/: ci.sh
.github/: README.md
.shlop/: sessions.cbor
config/: cli.json5  harness.json5  models.json5
crates/shlop-agent/: Cargo.toml
crates/shlop-agent/src/: lib.rs  main.rs
crates/shlop-cli/: Cargo.toml
crates/shlop-cli-term/: Cargo.toml  README.md
crates/shlop-cli-term/src/: lib.rs  main.rs  screen.rs
crates/shlop-cli/src/: lib.rs  main.rs
crates/shlop-config/: Cargo.toml
crates/shlop-config/src/: lib.rs
crates/shlop-core/: Cargo.toml
crates/shlop-core/src/: lib.rs
crates/shlop-ext-fs/: Cargo.toml
crates/shlop-ext-fs/src/: lib.rs  main.rs
crates/shlop-ext-shell/: Cargo.toml
crates/shlop-ext-shell/src/: lib.rs  main.rs
crates/shlop-proto/: Cargo.toml
crates/shlop-proto/src/: lib.rs
crates/shlop-socket/: Cargo.toml
crates/shlop-socket/src/: lib.rs
crates/shlop-supervisor/: Cargo.toml
crates/shlop-supervisor/src/: lib.rs
crates/shlop-supervisor/tests/: supervisor.rs
crates/shlop-test-support/src/: lib.rs
crates/tau/: Cargo.toml
crates/tau-agent/: Cargo.toml
crates/tau-agent/src/: common.rs  lib.rs  main.rs  openai.rs  responses.rs  tests.rs
crates/tau-agent/src/openai/: tests.rs
crates/tau-agent/src/responses/: pool.rs  tests.rs
crates/tau-blocking-notify-channel/: Cargo.toml
crates/tau-blocking-notify-channel/src/: lib.rs
crates/tau-cli/: Cargo.toml
crates/tau-cli-picker/: Cargo.toml
crates/tau-cli-picker/src/: lib.rs
crates/tau-cli-term/: Cargo.toml  README.md
crates/tau-cli-term-raw/: Cargo.toml  README.md
crates/tau-cli-term-raw/src/: lib.rs  main.rs  screen.rs  style.rs  tests.rs
crates/tau-cli-term-raw/src/screen/: tests.rs
crates/tau-cli-term/src/: completion.rs  lib.rs  main.rs  resolve.rs  screen.rs  style.rs  tests.rs
crates/tau-cli/src/: chat.rs  cli.rs  daemon.rs  event_renderer.rs  lib.rs  main.rs  settings_registry.rs  tests.rs  tool_render.rs
crates/tau-config/: Cargo.toml
crates/tau-config/src/: atomic.rs  lib.rs  settings.rs
crates/tau-config/src/settings/: tests.rs
crates/tau-core/: Cargo.toml
crates/tau-core/src/: bus.rs  connection.rs  event_log.rs  lib.rs  memory.rs  policy.rs  session.rs  session_store.rs  tests.rs  tool_registry.rs
crates/tau-ext-core-delegate/src/: lib.rs
crates/tau-ext-dpc-notifications/: Cargo.toml
crates/tau-ext-dpc-notifications/src/: lib.rs  main.rs
crates/tau-ext-fs/: Cargo.toml
crates/tau-ext-fs/src/: lib.rs  main.rs
crates/tau-ext-shell/: Cargo.toml
crates/tau-ext-shell/src/: agents.rs  argument.rs  config.rs  diff.rs  display.rs  isolation.rs  lib.rs  main.rs  semaphore.rs  tests.rs  tools.rs  truncate.rs
crates/tau-ext-shell/src/tools/: edit.rs  find.rs  grep.rs  ls.rs  read.rs  shell.rs  write.rs
crates/tau-ext-std-notifications/src/: tests.rs
crates/tau-ext-test-dummy/: Cargo.toml
crates/tau-ext-test-dummy/src/: lib.rs  main.rs
crates/tau-ext-websearch-exa/: Cargo.toml  README.md
crates/tau-ext-websearch-exa/src/: lib.rs  main.rs  tests.rs
crates/tau-extension/: Cargo.toml
crates/tau-extension/src/: lib.rs
crates/tau-harness/: Cargo.toml
crates/tau-harness/src/: daemon.rs  dedup.rs  dirs.rs  format.rs  harness.rs  lib.rs  model.rs  prompt.rs  settings.rs
crates/tau-harness/src/harness/: dispatch.rs  replay.rs  skill_tool.rs  tests.rs
crates/tau-harness/src/harness/tests/: dedup.rs  dispatch.rs  interception.rs  lifecycle.rs  mod.rs  model.rs  replay.rs  skill_tool.rs
crates/tau-proto/: Cargo.toml
crates/tau-proto/src/: events.rs  frame.rs  lib.rs  tests.rs  token_usage.rs
crates/tau-provider/: Cargo.toml
crates/tau-provider-cli/: Cargo.toml
crates/tau-provider-cli/src/: lib.rs  tests.rs
crates/tau-provider/src/: atomic.rs  cli.rs  lib.rs  oauth.rs  resolver.rs  storage.rs
crates/tau-provider/src/resolver/: tests.rs
crates/tau-session-inspect/: Cargo.toml
crates/tau-session-inspect/src/: lib.rs
crates/tau-skills/src/: lib.rs  tests.rs
crates/tau-socket/: Cargo.toml
crates/tau-socket/src/: lib.rs
crates/tau-socket/tests/: daemon_attach.rs
crates/tau-supervisor/: Cargo.toml
crates/tau-supervisor/src/: lib.rs
crates/tau-supervisor/tests/: supervisor.rs
crates/tau-term-screen/: Cargo.toml
crates/tau-term-screen/src/: lib.rs
crates/tau-test-support/: Cargo.toml
crates/tau-test-support/src/: lib.rs  tests.rs
crates/tau-themes/src/: color.rs  lib.rs  names.rs  theme.rs
crates/tau-themes/src/theme/: tests.rs
crates/tau-themes/themes/: tau.json5
crates/tau/src/: main.rs
docs/: events.md
site/: index.html
