[package]
name = "shlop-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
ciborium = "0.2.2"
serde = { version = "1", features = ["derive"] }
shlop-proto = { path = "../shlop-proto" }

[dev-dependencies]
shlop-agent = { path = "../shlop-agent" }
shlop-ext-fs = { path = "../shlop-ext-fs" }
tempfile = "3"
