[package]
name = "tau-ext-websearch-exa"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
serde_json.workspace = true
tau-extension.workspace = true
tau-proto.workspace = true
tracing.workspace = true
ureq.workspace = true
