[package]
name = "tau-provider-cli"
version.workspace = true
edition.workspace = true
description.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
rust-version.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
comfy-table.workspace = true
dialoguer.workspace = true
serde_json.workspace = true
tau-cli-picker.workspace = true
tau-config.workspace = true
tau-proto.workspace = true
tau-provider.workspace = true
