[package]
name = "tau-session-inspect"
version.workspace = true
edition.workspace = true
description.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
rust-version.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
tau-config.workspace = true
tau-core.workspace = true
tau-proto.workspace = true
