[package]
name = "tau-term-screen"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
bon.workspace = true
crossterm.workspace = true
unicode-width.workspace = true

[dev-dependencies]
vt100.workspace = true
